@@ -10,35 +10,45 @@
     <nz-collapse>
       <nz-collapse-panel
         *ngFor="let panel of panels; let i = index; trackBy: getPanelId"
-        [nzHeader]="panel.name"
+        [nzHeader]="fleetTitle"
         [nzActive]="panel.active"
         [nzDisabled]="panel.disabled"
       >
-        <span>Fleet Priority: </span>
-        <nz-input-number
-          nzSize="small"
-          class="fleet-priority"
-          nzMin="0"
-          nzMax="5000"
-          [(ngModel)]="ms.game.shipyardManager.fleetNavCapPriorityUi[i]"
-        ></nz-input-number>
-        <span>Fleet Capacity: </span>
-        <span class="monospace">{{
-          ms.game.shipyardManager.fleetsCapacity[i] | format
-        }}</span>
-        <span class="new-cap">New Fleet Capacity: </span>
-        <span
-          class="monospace"
-          [class.text-success]="
-            ms.game.shipyardManager.fleetsCapacityUi[i] >
-            ms.game.shipyardManager.fleetsCapacity[i]
-          "
-          [class.text-danger]="
-            ms.game.shipyardManager.fleetsCapacityUi[i] <
-            ms.game.shipyardManager.fleetsCapacity[i]
-          "
-          >{{ ms.game.shipyardManager.fleetsCapacityUi[i] | format }}</span
-        >
+        <ng-template #fleetTitle>
+          <strong class="fleet-name"> {{ panel.name }} </strong>
+          <!-- <span class="sub-title text-secondary">
+            Capacity:
+            <span class="monospace">
+              {{ ms.game.shipyardManager.fleetsCapacity[i] | format }}
+            </span>
+          </span> -->
+
+          <span class="text-secondary">Priority: </span>
+          <nz-input-number
+            nzSize="small"
+            class="fleet-priority"
+            nzMin="0"
+            nzMax="5000"
+            [(ngModel)]="ms.game.shipyardManager.fleetNavCapPriorityUi[i]"
+          ></nz-input-number>
+          <span class="text-secondary">Capacity: </span>
+          <span class="monospace fleet-capacity">{{
+            ms.game.shipyardManager.fleetsCapacity[i] | format
+          }}</span>
+          <span class="new-cap text-secondary">New Capacity: </span>
+          <span
+            class="monospace"
+            [class.text-success]="
+              ms.game.shipyardManager.fleetsCapacityUi[i] >
+              ms.game.shipyardManager.fleetsCapacity[i]
+            "
+            [class.text-danger]="
+              ms.game.shipyardManager.fleetsCapacityUi[i] <
+              ms.game.shipyardManager.fleetsCapacity[i]
+            "
+            >{{ ms.game.shipyardManager.fleetsCapacityUi[i] | format }}</span
+          >
+        </ng-template>
         <nz-table
           #basicTable
           nzTemplateMode
@@ -149,6 +159,31 @@
       <button nz-button (click)="reinforceAll()">
         <span>Reinforce All</span>
       </button>
+      <button nz-button (click)="copyOne()">
+        <span>Copy all from Fleet 1</span>
+      </button>
+      <button nz-button nz-dropdown [nzDropdownMenu]="menu">
+        <span>Fleets priorities</span><i nz-icon nzType="down"></i>
+      </button>
+      <nz-dropdown-menu #menu="nzDropdownMenu">
+        <ul nz-menu>
+          <li nz-menu-item (click)="setFleets(0)">
+            <a>Fleet 1</a>
+          </li>
+          <li nz-menu-item (click)="setFleets(1)">
+            <a>2 Fleets</a>
+          </li>
+          <li nz-menu-item (click)="setFleets(2)">
+            <a>3 Fleets</a>
+          </li>
+          <li nz-menu-item (click)="setFleets(3)">
+            <a>4 Fleets</a>
+          </li>
+          <li nz-menu-item (click)="setFleets(4)">
+            <a>5 Fleets</a>
+          </li>
+        </ul>
+      </nz-dropdown-menu>
     </nz-button-group>
 
     <nz-alert
