@@ -30,3 +30,10 @@ nz-button-group {
 .design-name {
   cursor: pointer;
 }
+.fleet-name {
+  margin-right: 1rem;
+}
+.fleet-capacity {
+  min-width: 4rem;
+  display: inline-block;
+}
